<resources>
    <string name="app_name">CIS298Assignment2</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="convert">Convert:</string>
    <string name="from">From</string>
    <string name="to">To</string>

    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="kelvin">Kelvin</string>
    <string name="rankin">Rankin</string>

    <string name="convert_button">CONVERT</string>

    <string name="anwerText">100.0 C = 212.0 F</string>
    <string name="formulaAnswer">[F] = ([C} x 9/5) + 32</string>

    <string name="no_from_chosen">You must select the type of temperature to convert from.</string>
    <string name="no_to_chosen">You must select the type of temperature to convert to.</string>
    <string name="no_temperature_entered">You must enter the temperature to convert.</string>
    <string name="to_from_units_same">You must enter different unit types to do a conversion!</string>

</resources>
