<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <TextView
        android:id="@+id/convertPrompt"
        android:text="@string/convert"
        android:textSize="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:inputType="numberDecimal"
    android:paddingRight="160dp"
    android:paddingTop="20dp"
    android:id="@+id/edit_text"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="32dp"
                android:textColor="#be1919"
                android:text="@string/from"/>

            <RadioButton
                android:id="@+id/radioButtonFromCelsius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="32dp"
                android:text="@string/celsius"/>

            <RadioButton
                android:id="@+id/radioButtonFromFahrenheit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="32dp"
                android:text="@string/fahrenheit"/>

            <RadioButton
                android:id="@+id/radioButtonFromKelvin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="32dp"
                android:text="@string/kelvin"/>

            <RadioButton
                android:id="@+id/radioButtonFromRankin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="32dp"
                android:text="@string/rankin"/>

        </RadioGroup>



        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="32dp"
                android:textColor="#be1919"
                android:text="@string/to"/>

        <RadioButton
            android:id="@+id/radioButtonToCelsius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32dp"
            android:text="@string/celsius"/>

        <RadioButton
            android:id="@+id/radioButtonToFahrenheit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32dp"
            android:text="@string/fahrenheit"/>

        <RadioButton
            android:id="@+id/radioButtonToKelvin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32dp"
            android:text="@string/kelvin"/>

        <RadioButton
            android:id="@+id/radioButtonToRankin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32dp"
            android:text="@string/rankin"/>

    </RadioGroup>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32dp"
        android:textColor="#be1919"
        android:text="@string/convert"/>

</LinearLayout>
